Update Connect Swagger (#1648)
